--- a/layouts/taxonomy/category.terms.html
+++ b/layouts/taxonomy/category.terms.html
@@ -18,7 +18,13 @@
               {{/* Custom Order Logic */}}
               {{ $categories := .Site.Taxonomies.categories }}
               {{ $orderedList := slice }}
-              {{ $preferredOrder := slice "專業技術" "研究所論文" "研究生專題" "大學生專題" }}
+              {{ $isEnglish := eq .Site.Language.Lang "en" }}
+              {{ $preferredOrder := slice }}
+              {{ if $isEnglish }}
+                {{ $preferredOrder = slice "Personal Experience" "Professional Technology" "Master's Thesis" "Graduate Project" "Undergraduate Project" }}
+              {{ else }}
+                {{ $preferredOrder = slice "個人經歷" "專業技術" "研究所論文" "研究生專題" "大學生專題" }}
+              {{ end }}
 
               {{/* 1. Add preferred items first */}}
               {{ range $preferredOrder }}
